REGRESSION (r105513): CSS max-width is not applied to SVG element https://bugs.webkit.org/show_bug.cgi?id=87050

Reviewed by Darin Adler.

Source/WebCore: 

Tests: svg/css/max-height.html
       svg/css/max-width.html

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::computeReplacedLogicalWidth): Changed to also call into the base
class implementation of this function if max-width was specified.
(WebCore::RenderSVGRoot::computeReplacedLogicalHeight): Changed to call into the bas class
implementation of this function if either height or max-height were specified.

LayoutTests: 

* svg/css/max-height-expected.png: Added.
* svg/css/max-height-expected.txt: Added.
* svg/css/max-height.html: Added.
* svg/css/max-width-expected.png: Added.
* svg/css/max-width-expected.txt: Added.
* svg/css/max-width.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@118074 bbb929c8-8fbe-4397-9dbb-9b2b20218538